[package]
name = "hodl-ticker"
description="Rust cryptocurrency prices on CLI"
version = "1.7.0"
authors = ["Alexandre Chêne <kooparse@protonmail.com>"]
license="MIT"
repository="https://github.com/kooparse/hodl-ticker"
readme = "README.md"
keywords = ["cryptocurrency", "ticker", "bitcoin", "ethereum"]
edition = "2018"

[dependencies]
termion = "1.5.3"
reqwest = { version = "0.10.0-alpha.1", features = ['blocking'] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "2.31.2", features = ["yaml"] }
prettytable-rs = "0.8"
